--- a/desafios/d01-1_encriptador/style.css
+++ b/desafios/d01-1_encriptador/style.css
@@ -1,7 +1,20 @@
 @charset "UTF-8";
 
 /* margin-block: em cima e embaixo
- * margin-inline: esquerda e direita */
+ * margin-inline: esquerda e direita 
+
+40 = 3
+120 = 10
+40 = 3
+40 = 3
+688 = 50
+40 = 3
+40 = 3
+400 = 30
+40 = 3
+
+valor/13,68 = %
+ */
 
 :root {
 	/* theme: defult blue */
@@ -24,14 +37,11 @@
 	box-sizing: border-box;
 }
 
-.collor-fill {
-	fill: var(--dark-collor);
-}
-
 body {
 	height: 100vh;
 	background: var(--light-collor);
 	font-family: 'Arial Narrow', Arial, sans-serif;
+
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
@@ -39,18 +49,29 @@ body {
 }
 
 main {
-	max-width: 1368px;
-	height: 100%;
+	width: 100%;
+	min-height: 100%;
 	margin-inline: auto;
-	padding-block: 40px;
+	padding: 40px;
+
 	display: flex;
 	align-items: stretch;
 	justify-content: center;
+	gap: 2%;
+}
+
+/* imgs svg */
+svg {
+	width: 100%;
+}
+
+.collor-fill {
+	fill: var(--dark-collor);
 }
 
 /* Logo */
 header {
-	margin-inline: 40px;
+	width: 80px;
 	color: var(--dark-collor);
 	font-size: 7.2rem;
 	text-align: center;
@@ -59,7 +80,6 @@ header {
 /* Input */
 #in-text {
 	width: 45%;
-	margin-inline: 40px;
 	padding: 24px;
 	display: flex;
 	flex-direction: column;
@@ -68,6 +88,7 @@ header {
 
 input {
 	background-color: transparent;
+	height: 100%;;
 	border: none;
 	font-size: 3.2rem;
 	color: var(--dark-collor);
@@ -94,18 +115,18 @@ input::placeholder {
 
 /* Output */
 #out-text {
-	width: 45%;
+	max-width: 45%;
+	min-width: 25%;
 	height: 100%;
 	border-radius: 3.2rem;
-	margin-inline: 40px;
 	padding: 24px;
 	box-shadow: 0 24px 32px -8px rgba(0, 0, 0, 0.08);
 	background-color: var(--white);
+	color: var(--dark-grey);
 
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
-	color: var(--dark-grey);
 }
 
 .hidden {
@@ -130,11 +151,7 @@ input::placeholder {
 
 #out-text p:nth-child(4) {
 	font-size: 2.4rem;
-}
-
-/* img svg */
-#out-text svg {
-	width: 100%;
+	margin-block-end: 16px;
 }
 
 /* Buttons */
@@ -172,7 +189,7 @@ footer {
 	padding: 24px;
 	background-color: var(--dark-collor);
 	font-size: 1.2rem;
-	color: var(--light-collor)
+	color: var(--light-collor);
 }
 
 footer p {
@@ -181,12 +198,18 @@ footer p {
 
 /* Media-queries */
 @media screen and (max-width: 1023px) {
+	body {
+		height: auto;
+	}
+	
 	#main {
 		width: 100%;
+		height: 100%;
 		margin-block: 16px;
 		padding-block: 0;
+		
 		flex-direction: column;
-		justify-content: space-evenly;
+		justify-content: space-between;
 		align-items: stretch;
 		gap: 16px;
 	}
@@ -204,7 +227,7 @@ footer p {
 		height: 800px;
 	}
 
-	.empty-text svg {
+	#out-text svg {
 		display: none;
 	}
 
@@ -213,7 +236,7 @@ footer p {
 	}
 
 	.cripto-buttons button {
-		min-width: 328px;
+		max-width: 328px;
 		width: 100%;
 	}
 }
